# BayeSAF

./: LICENSE  README.md
database/alkylbenzenes/: alkylbenzenes.xlsx  alkylbenzenes_MatlabData.csv  alkylbenzenes_MatlabData.xlsx  alkylbenzenes_Names.csv  alkylbenzenes_Names.xlsx  alkylbenzenes_SMILES.csv  (+1 more)
distillation/: DistillationCurve.m  Flash.m
gsa/: sobol.m  sobol_distillation.m  sobol_lumped.m
matlab/gsa/: sobol.m  (+2 more)
mcmc/: DifferentialEvolutionMarkovChain.m
pdfs/: LikelihoodFunction.m  dirichlet_pdf.m  discrete_uniform.m  pdf_build.m  uniform_pdf.m
postprocessing/: MAPfinder.m  MAPwriter.m  OFwriter.m  visualizeResults.m
python/: pyproject.toml
python/examples/CHRJ_3comp/: example_hefa.py
python/src/bayesaf/: __init__.py
python/src/bayesaf/distillation/: __init__.py  distillation_curve.py  flash.py
python/src/bayesaf/gsa/: __init__.py  sobol.py  sobol_lumped.py
python/src/bayesaf/mcmc/: __init__.py  demc.py
python/src/bayesaf/pdfs/: __init__.py  distributions.py  likelihood.py  pdf_build.py
python/src/bayesaf/postprocessing/: __init__.py  map_finder.py  map_writer.py  of_writer.py  props_pushforward.py  visualize.py
python/src/bayesaf/thermo_transport/: __init__.py  hydrocarbons.py  properties.py
python/src/bayesaf/utilities/: __init__.py  composition.py  data_import.py  find_index.py  misc.py
thermo-transport/: Hydrocarbons.m  ThermophysicalProperties_LiquidMixture.m  ThermophysicalProperties_SingleLiquid.m
utilities/: data_import.m  daviolinplot.m  findIndex_eta.m  mol2mass.m  molWeight.m  p_distillation.m  threshold_temperature.m
(+152 files in other folders)
